# This file is part of the pgconnstr library.
# Copyright 2020 Canonical Ltd.
# 
# This program is free software: you can redistribute it and/or modify
# it under the terms of the Lesser GNU General Public License version 3,
# as published by the Free Software Foundation.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranties of
# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR
# PURPOSE.  See the Lesser GNU General Public License for more details.
# 
# You should have received a copy of the Lesser GNU General Public
# License along with this program.  If not, see
# <http://www.gnu.org/licenses/>.

[metadata]
name = pgconnstr
version = 1.0.1
url = https://github.com/canonical/pgconnstr
description = A tool for parsing and manipulating PostgreSQL libpq style connection strings and URIs
author = Stuart Bishop
author_email = stuart.bishop@canonical.com
maintainer = PostgreSQL Charmers
maintainer_email = postgresql-charmers@lists.canonical.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PostgreSQL, postgres
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
py_modules = pgconnstr
python_requires = >=3.6
